feat: remove `check_param`. add `param`